2005-05-26	Gaius Mulley <gaius@glam.ac.uk>

	* modified debian directory so that 0.49 can be built as
	  a debian package

2005-05-25	Michel Derosa <derosa@videotron.ca>

	* fixed malloc.h include for BSD based systems in
	  gm2/gm2-libs-pim/Break.c

2005-07-21	Gaius Mulley <gaius@glam.ac.uk>

	* moved gm2/examples/executive/Executive, TimerHandler, Debug,
	  SysVec to gm2/gm2-libs-coroutines and
	* made gm2/Make-lang.in install these modules
	* removed the -Wulm option and replaced it with -Wlibs=ulm
	* added -Wlibs=logitech, -Wlibs=pim, -Wlibs=iso,
	  -Wlibs=pim-coroutine
	* altered gm2/Make-lang.in so that the correct library modules
	  are placed into the correct directories during install.

2005-07-20	Gaius Mulley <gaius@glam.ac.uk>

	* fixed bug exposed by: testsuite/gm2/pim/pass/maxlongint.mod
	* modified IsMathType in gm2/gm2-compiler/M2Base.mod accordingly.
	
2005-07-18	Gaius Mulley <gaius@glam.ac.uk>

	* updated gm2/gm2.texi and gm2/gm2-libs.texi
	* introduced modules Delay, ErrorCode, DebugTrace
	  and Break into gm2/gm2-libs-pim
	* modified gm2/Make-file.in so that these modules
	  are built and installed.

2005-07-14	Gaius Mulley <gaius@glam.ac.uk>

	* GM2 Release 0.49
	* tagged CVS using gm2_0_49
	
	* introduced SHORTCARD into p2c
	* added gm2/gm2-libs-pim/CardinalIO.def and
	  gm2/gm2-libs-pim/CardinalIO.mod
	* added a number of procedures to implement CardinalIO.mod
	  in gm2/gm2-libs/StringConvert.mod
	* improved gm2/gm2.texi
	* modified gm2/Make-file.in so that the library modules
	  in gm2/gm2-libs-pim are also built and installed

2005-07-10	Gaius Mulley <gaius@glam.ac.uk>

	* constant literal string array assignment of smaller sizes to
	  array variables and parameters.

2005-07-09	Gaius Mulley <gaius@glam.ac.uk>

	* implemented MAX(ADDRESS) and MIN(ADDRESS)

2005-07-08	Gaius Mulley <gaius@glam.ac.uk>

	* finally all ulm modules compile under GM2
	* fixed negative integer bug which was exposed in the 32 bit port